--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -87,8 +91,9 @@
 			<version>4.5.14</version> </dependency> -->
 
 
-		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-tx</artifactId> 
-			<version>${springframework.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>org.springframework</groupId>
+		<artifactId>spring-tx</artifactId>
+		<version>${springframework.version}</version> </dependency> -->
 
 		<!-- Logging -->
 		<dependency>
