--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.address=0.0.0.0
 server.port=9090
-spring.datasource.url=jdbc:mysql://lninstructor.mysql.database.azure.com:3306/test?useSSL=true
-spring.datasource.username=admin1
-spring.datasource.password=Ad12345678
+spring.datasource.url=jdbc:mariadb://192.168.1.4:3306/test
+spring.datasource.username=ravi
+spring.datasource.password=ravi
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=100
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
