--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.address=0.0.0.0
 server.port=9090
-spring.datasource.url=jdbc:mariadb://192.168.1.4:3306/test
+spring.application.name = instructorapp
+spring.datasource.url=jdbc:mariadb://192.168.1.7:3306/test
 spring.datasource.username=ravi
 spring.datasource.password=ravi
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=100
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.main.allow-bean-definition-overriding=true
 #logging.level.root = INFO
 #logging.file.name = /tmp/application.log
