--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,13 @@
 		</dependency>
 
 	</dependencies>
-
+	<distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>artifactory-snapshots</name>
+        <url>http://192.168.1.10:8081/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
+</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
