--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
 	</properties>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.jfrog.buildinfo/build-info-extractor-maven3 -->
+<dependency>
+    <groupId>org.jfrog.buildinfo</groupId>
+    <artifactId>build-info-extractor-maven3</artifactId>
+    <version>2.41.5</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
