--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
     <artifactId>build-info-extractor-maven3</artifactId>
     <version>2.41.5</version>
 </dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
+<dependency>
+    <groupId>org.codehaus.groovy</groupId>
+    <artifactId>groovy-all</artifactId>
+    <version>3.0.19</version>
+    <type>pom</type>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
